--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native": "0.59.4",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.8.1"
+    "react-navigation": "^3.8.1",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
