--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-gesture-handler": "^1.1.0",
